@@ -1,6 +1,9 @@
 # ChangeLog for app-leechcraft/lc-xproxy
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-leechcraft/lc-xproxy/ChangeLog,v 1.12 2014/08/03 19:06:29 maksbotan Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-leechcraft/lc-xproxy/ChangeLog,v 1.13 2014/08/04 18:17:57 maksbotan Exp $
+
+  04 Aug 2014; Maxim Koltsov <maksbotan@gentoo.org> lc-xproxy-9999.ebuild:
+  Add einfo message about recommended dependencies
 
 *lc-xproxy-0.6.70 (03 Aug 2014)
 
